--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,8 +9,12 @@
     font-family: 'Poppins', sans-serif;
 }
 
+body::-webkit-scrollbar {
+    display: none;
+}
+
 html {
-    scroll-behavior: smooth;
+    scroll-behavior: smooth;  
 }
 
 
