--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -316,6 +316,22 @@ header button:hover {
     margin: 5px;
 }
 
+.skill-section img{
+    aspect-ratio: 3/2;
+    object-fit: contain;
+}
+
+/* .skill-cards-container {
+    display: flex;
+    overflow: hidden;
+    width: 100%;
+  }
+
+  .skill-cards-container .service-card {
+    flex: 0 0 auto;
+    transition: transform 0.5s ease-out;
+  } */
+
 /* contact Section */
 
 .contact-section {
